Cleanup
Optimized imports and deleted unsued resource files